--- a/React/src/styles.css
+++ b/React/src/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
